:bug: side bar overflow

--- a/style/style.css
+++ b/style/style.css
@@ -212,12 +212,11 @@ header nav a.logout {
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
     width: 22vw;
-    height: 50vh;
+    height: 40vh;
     margin-bottom: 0;
     margin-top: 0;
     position: absolute;
-    bottom: 0;
-    overflow: scroll;
+    bottom: 10vh;
 }
 
 .chat h3 {
